// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render React extensions correctly 1`] = `
<Extension
  appState={
    {
      "edition": "community",
      "productionDatabase": true,
      "qualifiers": [
        "TRK",
      ],
      "settings": {},
      "version": "1.0",
      "versionEOL": "2022-01-01",
    }
  }
  currentUser={
    {
      "dismissedNotices": {
        "educationPrinciples": false,
      },
      "isLoggedIn": false,
    }
  }
  extension={
    {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={{}}
  location={
    {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": {},
      "search": "",
      "state": {},
    }
  }
  router={
    {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
  updateCurrentUserHomepage={[MockFunction]}
>
  <div>
    <Helmet
      title="Foo"
    />
    <div />
  </div>
</Extension>
`;

exports[`should render React extensions correctly 2`] = `
<Extension
  appState={
    {
      "edition": "community",
      "productionDatabase": true,
      "qualifiers": [
        "TRK",
      ],
      "settings": {},
      "version": "1.0",
      "versionEOL": "2022-01-01",
    }
  }
  currentUser={
    {
      "dismissedNotices": {
        "educationPrinciples": false,
      },
      "isLoggedIn": false,
    }
  }
  extension={
    {
      "key": "foo",
      "name": "Foo",
    }
  }
  intl={{}}
  location={
    {
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": {},
      "search": "",
      "state": {},
    }
  }
  router={
    {
      "createHref": [MockFunction],
      "createPath": [MockFunction],
      "go": [MockFunction],
      "goBack": [MockFunction],
      "goForward": [MockFunction],
      "isActive": [MockFunction],
      "push": [MockFunction],
      "replace": [MockFunction],
      "setRouteLeaveHook": [MockFunction],
    }
  }
  updateCurrentUserHomepage={[MockFunction]}
>
  <div>
    <Helmet
      title="Foo"
    />
    <div
      className="extension"
    />
  </div>
</Extension>
`;
